* v10.0.0:
~~~~~~~~~~

* Common changes
================
* Referencing KGySoft.Drawing.Core v10.0.0.
  See also https://github.com/koszeggy/KGySoft.Drawing/blob/master/KGySoft.Drawing.Core/changelog.txt

+ KGySoft.Drawing.Uwp namespace
===============================
+ New GeometryExtensions class:
  + New ToPath method: To convert an UWP Geometry instance to a KGySoft.Drawing.Shapes.Path.


~~~~~~~~~
* v9.0.0:
~~~~~~~~~

* Assembly changes:
===================
* Referencing KGySoft.Drawing.Core v9.0.0, which enables high performance shape drawing. Combined with this package
  it makes possible to draw shapes into WriteableBitmap instances, even with quantizing and dithering.
  See also https://github.com/koszeggy/KGySoft.Drawing/blob/master/KGySoft.Drawing.Core/changelog.txt
  and also https://github.com/koszeggy/KGySoft.Drawing/blob/master/README.md#shape-drawing


~~~~~~~~~
* v8.1.0:
~~~~~~~~~

* Assembly changes:
===================
* Upgrading KGySoft.Drawing.Core dependency to 8.1.0.
  See https://github.com/koszeggy/KGySoft.Drawing/blob/master/KGySoft.Drawing.Core/changelog.txt


~~~~~~~~~
+ v8.0.0:
~~~~~~~~~

* Assembly changes:
===================
* Upgrading KGySoft.Drawing.Core dependency to 8.0.0.

+ KGySoft.Drawing.Uwp namespace
===============================
+ ColorExtensions class:
  + New ToPColor32, ToColor64, ToPColor64, ToColorF and ToPColorF conversion methods from Windows.UI.Color.
  + New ToWindowsColor overloads to convert KGySoft color types to Windows.UI.Color.


~~~~~~~~~
* v7.2.0:
~~~~~~~~~

* All changes are in the dependent KGySoft.Drawing.Core library only.
  See https://github.com/koszeggy/KGySoft.Drawing/blob/master/KGySoft.Drawing.Core/changelog.txt


~~~~~~~~~
+ v7.1.0:
~~~~~~~~~

+ KGySoft.Drawing.Uwp namespace
===============================
+ WriteableBitmapExtensions class:
  + New GetReadableBitmapData overload to specify the working color space.
  + New GetWritableBitmapData overload to specify the working color space.