@@ -38,7 +38,7 @@ namespace KGySoft.Drawing.Uwp.UnitTest
     {
         #region Properties
 
-        protected static bool SaveToFile => true;
+        protected static bool SaveToFile => false;
         private static bool AddTimestamp => true;
 
         #endregion
