@@ -18,6 +18,7 @@
 ===============================
 + New GeometryExtensions class:
   + New ToPath method: To convert an UWP Geometry instance to a KGySoft.Drawing.Shapes.Path.
+  + New ToGeometry method: To convert KGySoft.Drawing.Shapes.Path instance to an UWP Geometry.
 
 
 ~~~~~~~~~
